; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-path_id.c_handle_bcma.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-path_id.c_handle_bcma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"bcma%*u:%u\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"bcma-%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8**)* @handle_bcma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @handle_bcma(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @sd_device_get_sysname(i32* %8, i8** %6)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %22

12:                                               ; preds = %2
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @sscanf(i8* %13, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32* %7)
  %15 = icmp ne i32 %14, 1
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32* null, i32** %3, align 8
  br label %22

17:                                               ; preds = %12
  %18 = load i8**, i8*** %5, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @path_prepend(i8** %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %4, align 8
  store i32* %21, i32** %3, align 8
  br label %22

22:                                               ; preds = %17, %16, %11
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i64 @sd_device_get_sysname(i32*, i8**) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1

declare dso_local i32 @path_prepend(i8**, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
